[package]
name = "streaming-harness-hdrhist"
version = "0.3.1-pre"
authors = ["Andrea Lattuada <andrea.lattuada@inf.ethz.ch>"]
edition = "2018"

description = "Minimal hdr histogram (https://hdrhistogram.github.io/HdrHistogram/) implementation in rust"
license = "MIT"

[dependencies]

[dev-dependencies]
rand = "^0.5"
textplots = "^0.2"
