[package]
name = "streaming-harness-hdrhist"
version = "0.4.1-pre"
authors = ["Andrea Lattuada <andrea.lattuada@inf.ethz.ch>"]
edition = "2018"

description = "Deprecated in favour of https://crates.io/crates/hdrhist"
license = "MIT"

[dependencies]

[dev-dependencies]
rand = "^0.5"
textplots = "^0.2"
